	  as.data.frame.pdata.frame(): respects row.names argument

Changes since version 1.5-11

	* added RiceFarms to datasets to eliminate non-CRAN dependencies, (temporarily) removed 'pder' from suggested, uncommented (fixed) example in pdwtest.Rd

Changes since version 1.5-12

	* dataset Produc: added variable 'region' as 3rd column and description: 'pcap' is public capital (not private) while 'pc' is private capital (not public)
	* added importFrom as per CRAN check for submission.

Changes since version 1.5-13

	* fixed bug in vcovHC(... method="white") from degenerating diag() if any groups have only 1 element
	* reintroduced "white2" method.

Changes since version 1.5-14

	* mylm: added commented (i.e. inactive) warning about dropped coefficients in estimation.
	* fitted.plm: added commented (i.e. inactive) warning in about dropped coefficients in estimated model compared to specified model.matrix.
	* added testfile tests/test_fitted.plm.R (some of those test currently do not run (commented, i.e. inactive)).

	* pmodel.response.pFormula: make sure supplied formula is a pFormula before we continue (coerce to pFormula)
	   fixes bugs like:
	    pmodel.response.pFormula(regular_formula, data = dat, model = "pooling")
	     # Error in names(y) <- namesy :
	     # 'names' attribute [482] must be the same length as the vector [0]
	   still some bugs left in pmodel.response -> see added testfile: tests/test_model.matrix_pmodel.response.R.

	* some testfiles: fixed wired encodings.

	* lag.pseries: modified to handle negative lags (=leading values).
	* lead.pseries: added function as a wrapper for lag.pseries(x, k=-1) for convenience, i.e. lag(x, k = -1) == lead(x, k = 1).
	* diff.pseries: prevented negative lags as input for to avoid confusion.
	* doc for pseries functions are made available under their name, e.g. ?lag now displays helpfile for lag.pseries in the help overview (besides e.g. stats::lag).